--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
+  "homepage":"http://mhmtbsrglu0.github.io/egitimuygulamasi",
   "name": "perculusclone",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
     "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "jquery": "^3.5.1",
     "react": "^17.0.1",
+    "react-addons-update": "^15.6.3",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -32,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "ghpages": "0.0.10"
   }
 }
